fix(shs-5781): regression color contrast on warbler load more buttons

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_pager.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_pager.scss
@@ -131,6 +131,21 @@
 
         }
 
+        .hs-button,
+        .hs-button--big {
+          &, &:hover, &:focus {
+            color: var(--palette--white);
+          }
+        }
+
+        .hs-secondary-button {
+          color: var(--palette--secondary);
+
+          &:hover, &:focus {
+            color: var(--palette--white);
+          }
+        }
+
         &.is-active {
           a {
             &, &:hover, &:focus {
